Updated relevant contribution information

--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     { "name": "Ori Avtalion"},
     { "name": "NamTH"},
     { "name": "minhngoc25a"},
-    { "name": "basitcodeenv"}
+    { "name": "basitcodeenv"},
+    { "name": "Yomafil"}
   ],
   "license": "GPL-3.0-only",
   "bugs": {
